trunk/Andromeda/test/test-src/com/sc2mod/andromeda/test/junit/unittests/types/uncheckedCast.a
class X{

}

static{
	X i = (!! X) 2; 	//works
	X j = (X) 1;		//error
}
